--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var drops = [];
 //x below is the x coordinate
 //1 = y co-ordinate of the drop(same for every drop initially)
 for(var x = 0; x < columns; x++)
-	drops[x] = 1; 
+	drops[x] = c.height / font_size + 1;
 
 //drawing the characters
 function draw()
