--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ c.height = window.innerHeight;
 c.width = window.innerWidth;
 
 //chinese characters - taken from the unicode charset
-var chinese = "田由甲申甴电甶男甸甹町画甼甽甾甿畀畁畂畃畄畅畆畇畈畉畊畋界畍畎畏畐畑";
+var chinese = "田由甲申甴电甶男甸甹町画甼甽甾甿畀畁畂畃畄畅畆畇畈畉畊畋界畍畎畏畐畑迎簡益诶西迪艾弗吉艾尺艾杰勒艾马艾娜哦屁吉吾艾儿艾丝伊吾维豆贝尔维艾克吾艾贼德";
 //converting the string into an array of single characters
 chinese = chinese.split("");
 
@@ -70,6 +70,9 @@ function draw()
 }
 
 setInterval(draw, 33);
+	
+
+	
 
 
 
