--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ var ctx = c.getContext("2d");
 c.height = window.innerHeight;
 c.width = window.innerWidth;
 
-//chinese characters - taken from the unicode charset
-var chinese = "田由甲申甴电甶男甸甹町画甼甽甾甿畀畁畂畃畄畅畆畇畈畉畊畋界畍畎畏畐畑";
+//unicode characters made using the compose key on ubuntu
+var comp_chars = "☭Ⓐ©®⁶ẞ§⑨ı⋄…¸≤→";
 //converting the string into an array of single characters
-chinese = chinese.split("");
+comp_chars = comp_chars.split("");
 
 var font_size = 10;
 var columns = c.width/font_size; //number of columns for the rain
@@ -55,7 +55,7 @@ function draw()
 	for(var i = 0; i < drops.length; i++)
 	{
 		//a random chinese character to print
-		var text = chinese[Math.floor(Math.random()*chinese.length)];
+		var text = comp_chars[Math.floor(Math.random()*comp_chars.length)];
 		//x = i*font_size, y = value of drops[i]*font_size
 		ctx.fillText(text, i*font_size, drops[i]*font_size);
 		
