--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function draw()
 	ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
 	ctx.fillRect(0, 0, c.width, c.height);
 	
-	ctx.fillStyle = "#0F0"; //green text
+	ctx.fillStyle = "rgba("+Math.random()*255+","+Math.random()*255+","+Math.random()*255+",1)"; //random colors for the letters
 	ctx.font = font_size + "px arial";
 	//looping over drops
 	for(var i = 0; i < drops.length; i++)
