--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Title of the document</title>
+<title>Crying Cats</title>
 <style>
     <!-- 
         /*basic reset*/
         * {margin: 0; padding: 0;}
         /*adding a black bg to the body to make things clearer*/
-        body {background: black;}
+    body 
+    {
+        background-image: url("https://pbs.twimg.com/media/DfPsnrBW4AAnwcR.jpg");
+        background-color: black;
+        background-repeat: no-repeat;
+        margin: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        
+    }
         canvas {display: block;}
     -->
 </style>
@@ -28,7 +40,7 @@ c.height = window.innerHeight;
 c.width = window.innerWidth;
 
 //chinese characters - taken from the unicode charset
-var chinese = "田由甲申甴电甶男甸甹町画甼甽甾甿畀畁畂畃畄畅畆畇畈畉畊畋界畍畎畏畐畑";
+var chinese = "crying cats";
 //converting the string into an array of single characters
 chinese = chinese.split("");
 
@@ -49,7 +61,7 @@ function draw()
 	ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
 	ctx.fillRect(0, 0, c.width, c.height);
 	
-	ctx.fillStyle = "#0F0"; //green text
+	ctx.fillStyle = "rgba(255,255,255,.2)"; //green text
 	ctx.font = font_size + "px arial";
 	//looping over drops
 	for(var i = 0; i < drops.length; i++)
